--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   <artifactId>basic-maven-project</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Basic Message Project</name>
-  <description>An application which greets and says farewell to user.</description>
+  <description>An application which give stucture for selenium framework.</description>
    <dependencies>
   <dependency>
-   <groupId>junit</groupId>
+   <groupId>com.selenium</groupId>
    <artifactId>junit</artifactId>
    <version>4.12</version>
    <scope>test</scope>
