--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sqa.ga</groupId>
-  <artifactId>basic-project</artifactId>
+  <artifactId>Basic-Project</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Basic Message Project</name>
+  <name>Basic-Project</name>
   <description>An application which give stucture for selenium framework.</description>
    <dependencies>
   <dependency>
