--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sqa.ga</groupId>
   <artifactId>Basic-Project</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>Basic-Project</name>
-  <description>An application which give stucture for selenium framework.</description>
+  <name>Basic Project</name>
+  <description>An application which greets and says farewell to user.</description>
    <dependencies>
   <dependency>
-   <groupId>com.selenium</groupId>
+   <groupId>junit</groupId>
    <artifactId>junit</artifactId>
    <version>4.12</version>
    <scope>test</scope>
